tests/rosetta/out/Smalltalk/count-the-coins-2.out
/tmp/count-the-coins-2.st:6: parse error, expected ']'
