tests/rosetta/out/Smalltalk/count-the-coins-2.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| countChange ways i coin j amount |
countChange := [:amount | ways := {}.
i := 0.
[(i <= amount)] whileTrue: [.
ways := ways copyWith: 0.
i := (i + 1).
].
.
ways at: 0 put: 1.
{100. 50. 25. 10. 5. 1} do: [:coin |.
j := coin.
[(j <= amount)] whileTrue: [.
ways at: j put: ((ways at: j) + (ways at: (j - coin))).
j := (j + 1).
].
.
].
.
ways at: amount. ].
amount := (1000 * 100).
Transcript show: ((((((('amount, ways to make change: ') + ((amount asString)))) + (' '))) + ((countChange value: amount asString)))) printString; cr.
